examples/test/testpolicy8126.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8126
  namespace: namespace362
spec:
  podSelector:
    matchLabels:
      key33: value21
      key40: value27
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key21: value35
      podSelector:
        matchLabels:
          key25: value46
          key29: value33
